--- a/index.html
+++ b/index.html
@@ -2,28 +2,88 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>D Rap Blaster - The Game</title>
+  <title>D Rap Blasters – The Game (EP)</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #111;
-      color: #fff;
+      background-color: #121212;
+      color: #f0f0f0;
+      margin: 0;
+      padding: 20px;
       text-align: center;
-      padding: 50px;
+    }
+    img.cover {
+      width: 300px;
+      max-width: 90%;
+      border-radius: 10px;
+      box-shadow: 0 0 20px rgba(255, 255, 255, 0.1);
+    }
+    h1 {
+      font-size: 2.5em;
+      margin: 20px 0 5px;
+    }
+    h2 {
+      color: #bbb;
+      font-weight: normal;
+      margin-bottom: 30px;
+    }
+    .track {
+      margin: 30px auto;
+      width: 90%;
+      max-width: 600px;
+      border-bottom: 1px solid #333;
+      padding-bottom: 20px;
     }
     audio {
-      margin-top: 30px;
       width: 100%;
-      max-width: 600px;
+      margin-top: 10px;
+    }
+    a.download {
+      display: inline-block;
+      margin-top: 10px;
+      color: #1db954;
+      text-decoration: none;
+    }
+    a.download:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
 <body>
-  <h1>D Rap Blaster</h1>
-  <h2>The Game</h2>
-  <audio controls>
-    <source src="The Game.mp3" type="audio/mpeg">
-    Your browser does not support the audio tag.
-  </audio>
+  <img src="162700_170191416355919_5976752_n.jpg" alt="Album Cover" class="cover">
+  <h1>D Rap Blasters</h1>
+  <h2>The Game (EP)</h2>
+
+  <div class="track">
+    <h3>1. The Game</h3>
+    <audio controls>
+      <source src="The Game.mp3" type="audio/mpeg">
+    </audio>
+    <a class="download" href="The Game.mp3" download>Download</a>
+  </div>
+
+  <div class="track">
+    <h3>2. Muqabala (Ve Main Gangsta)</h3>
+    <audio controls>
+      <source src="Muqabala (Ve Main Gangsta).mp3" type="audio/mpeg">
+    </audio>
+    <a class="download" href="Muqabala (Ve Main Gangsta).mp3" download>Download</a>
+  </div>
+
+  <div class="track">
+    <h3>3. My Swag</h3>
+    <audio controls>
+      <source src="My Swag.mp3" type="audio/mpeg">
+    </audio>
+    <a class="download" href="My Swag.mp3" download>Download</a>
+  </div>
+
+  <div class="track">
+    <h3>4. Step Up</h3>
+    <audio controls>
+      <source src="Step up.mp3" type="audio/mpeg">
+    </audio>
+    <a class="download" href="Step up.mp3" download>Download</a>
+  </div>
 </body>
 </html>
